# fearnation-mcp

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-08-fearnation-mcp.md
docs/superpowers/specs/: 2026-07-08-fearnation-mcp-design.md
src/fearnation_mcp/: __init__.py  __main__.py  crawler.py  db.py  parser.py  robots.py  search.py  server.py  utils.py
tests/: test_crawler.py  test_db.py  test_parser.py  test_robots.py  test_search.py  test_security.py  test_server.py  test_smoke.py
