[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fearnation-mcp"
version = "0.1.0"
description = "MCP server for searching fearnation.club Chinese news archive"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "yuki" }]
dependencies = [
    "mcp==2.0.0b1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "feedparser>=6.0",
    "opencc>=1.1",
    "httpx>=0.27",
]

[project.scripts]
fearnation-mcp = "fearnation_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "pyright>=1.1.350",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fearnation_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: tests that hit the live network (deselected by default)",
]
addopts = "-m 'not network'"
